--- a/index.html
+++ b/index.html
@@ -265,8 +265,9 @@
                 <div class="letter-corner corner-tl"></div>
                 <div class="letter-corner corner-br"></div>
                 <div class="message">
-                    <p>I love you,</p>
-                    <p>most ardently</p>
+                    <p>Happy valentine</p>
+                    <p>day's lytaaaa</p>
+                    <p>loved you</p>
                 </div>
             </div>
             <div class="hearts">
